Regenerate all clients with latest.