@@ -29,7 +29,7 @@ import javax.validation.Valid;
 
 
 @io.swagger.annotations.Api(description = "the default API")
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen", date = "2024-07-10T08:57:45.138804949Z[Etc/UTC]", comments = "Generator version: 7.6.0")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen", date = "2024-11-05T00:06:35.274091618Z[Etc/UTC]", comments = "Generator version: 7.9.0")
 public class DefaultApi  {
    private final DefaultApiService delegate;
 
@@ -40,7 +40,7 @@ public class DefaultApi  {
          String implClass = servletContext.getInitParameter("DefaultApi.implementation");
          if (implClass != null && !"".equals(implClass.trim())) {
             try {
-               delegate = (DefaultApiService) Class.forName(implClass).newInstance();
+               delegate = (DefaultApiService) Class.forName(implClass).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                throw new RuntimeException(e);
             }
